Typo in map title.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					generateOpenStreetMap(mapTitle, geo_features, centre, defaultZoom);
 					break;
 				case "townlands":
-					var mapTitle = "Kilcloon townlands";
+					var mapTitle = "Kilclone townlands";
 					var geo_features = {"type": "FeatureCollection", "features": []};
 					geo_features.features = geo_features.features.concat(civilparishes_features);
 					geo_features.features = geo_features.features.concat(kilclone_cp_features);
